--- a/Application/src/main/res/values/colors.xml
+++ b/Application/src/main/res/values/colors.xml
@@ -16,4 +16,7 @@
 -->
 <resources>
     <color name="control_background">#cc4285f4</color>
+    <color name="buttons_text_colors">#000000</color>
+    <color name="buttons_background_color">#FF9800</color>
+    <color name="buttons_background_color_2">#ffffff</color>
 </resources>
