--- a/Application/src/main/res/layout/activity_main.xml
+++ b/Application/src/main/res/layout/activity_main.xml
@@ -6,14 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
+    <ImageButton
         android:id="@+id/start_taking_pictures_button"
-        android:layout_width="133dp"
-        android:layout_height="131dp"
-        android:text="@string/start_taking_pictures_button"
+        android:layout_width="@dimen/main_activity_video_icon"
+        android:layout_height="@dimen/main_activity_video_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.532"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.061"
+        android:background="@drawable/ic_videocam_black_24dp" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/main_activity_margin_top"
+        android:text="@string/start_video_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.551"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
