--- a/Application/src/main/res/layout/activity_camera.xml
+++ b/Application/src/main/res/layout/activity_camera.xml
@@ -33,7 +33,7 @@
 
     <TextView
         android:id="@+id/resolution_string_tv"
-        android:layout_width="162dp"
+        android:layout_width="wrap_content"
         android:layout_height="28dp"
         android:layout_marginTop="44dp"
         app:layout_constraintEnd_toEndOf="parent"
