--- a/Application/src/main/res/layout/activity_camera.xml
+++ b/Application/src/main/res/layout/activity_camera.xml
@@ -35,8 +35,9 @@
         android:id="@+id/resolution_string_tv"
         android:layout_width="wrap_content"
         android:layout_height="28dp"
-        android:layout_marginTop="44dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="52dp"
+        app:layout_constraintEnd_toStartOf="@+id/image_frequency_tv"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -44,12 +45,22 @@
         android:id="@+id/stop_taking_pictures_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/rounded_rectangle"
         android:text="@string/stop_taking_pictures_button_text"
         android:textColor="@color/buttons_text_colors"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/camera_container"
-        android:background="@drawable/rounded_rectangle"/>
+        app:layout_constraintTop_toBottomOf="@+id/camera_container" />
+
+    <TextView
+        android:id="@+id/image_frequency_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="19dp"
+        android:layout_marginTop="53dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/resolution_string_tv"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
