--- a/Application/src/main/res/layout/activity_camera.xml
+++ b/Application/src/main/res/layout/activity_camera.xml
@@ -22,7 +22,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/camera_container"
-        android:name="com.example.android.camera2basic.Camera2BasicFragment"
+        class = "com.example.android.camera2basic.Camera2BasicFragment"
         android:layout_width="0dp"
         android:layout_height="400dp"
         app:layout_constraintBottom_toTopOf="@+id/stop_taking_pictures_button"
